--- a/index.html
+++ b/index.html
@@ -182,19 +182,19 @@
               {[
                 {
                   title: '旅行前',
-                  desc: 'AIが規程に沿った最適ルートを即提案。決裁もチャットで完結。',
+                  desc: '会議場所や予定から逆算し、無駄なく最適化された旅程を自動生成。',
                   imageUrl: 'https://images.unsplash.com/photo-1560440021-33f9b867899d?q=80&w=1974&auto=format&fit=crop',
                   linkUrl: 'front_trip.html' // 「旅行前」のリンク先
                 },
                 {
                   title: '旅行中',
-                  desc: 'ひとつの画面で進捗と費用を可視化。迷わないUI。',
+                  desc: '遅延や変更にも即対応、代替手段をAIが提案して安心の出張運営',
                   imageUrl: 'https://images.unsplash.com/photo-1488085061387-422e29b40080?q=80&w=1931&auto=format&fit=crop',
                   linkUrl: 'middle_trip.html' // 「旅行中」のリンク先
                 },
                 {
                   title: '旅行後',
-                  desc: 'ポリシー違反検知・リスク通知で安心の出張運用。',
+                  desc: '張データを自動集計しROIを可視化、次回計画にすぐ活用できる',
                   imageUrl: 'https://images.unsplash.com/photo-1586953208448-b95a79798f07?q=80&w=1974&auto=format&fit=crop',
                   linkUrl: 'end_trip.html' // 「旅行後」のリンク先
                 }
