--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               {[
                 {
                   title: '旅行前',
-                  desc: '会議場所や予定から逆算し、無駄なく最適化された旅程を自動生成',
+                  desc: '商談場所や予定から逆算し、無駄なく最適化された旅程を自動生成',
                   imageUrl: 'https://images.unsplash.com/photo-1560440021-33f9b867899d?q=80&w=1974&auto=format&fit=crop',
                   linkUrl: 'front_trip.html' // 「旅行前」のリンク先
                 },
@@ -194,7 +194,7 @@
                 },
                 {
                   title: '旅行後',
-                  desc: '出張データを自動集計し、会計処理・ROI可視化を自動化し、次回以降の出張パフォーマンス向上へ繋げる',
+                  desc: '会計処理・ROI可視化を自動化し、次回以降の出張質向上へ繋げる',
                   imageUrl: 'https://images.unsplash.com/photo-1586953208448-b95a79798f07?q=80&w=1974&auto=format&fit=crop',
                   linkUrl: 'end_trip.html' // 「旅行後」のリンク先
                 }
